--- a/index.html
+++ b/index.html
@@ -5,16 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biker Zone</title>
+    <!-- tailwind & daisy ui link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- tailwind custom color -->
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                'brand_color': '#E76F51',
+                banner_bg:'rgba(231, 111, 81, 0.10)',
+              }
+            }
+          }
+        }
+      </script>
+    <!-- custom style -->
+    <style>
+        .font_poppins{
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 </head>
 
-<body>
-    <header>
+<body class="font_poppins">
+    <header class="md:container md:max-auto">
         <!-- navbar -->
         <nav>
             <div class="navbar bg-base-100">
-                <div class="navbar-start">
+                <div class="flex-1">
                   <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
@@ -36,13 +58,91 @@
                       <li><a>Contact</a></li>
                   </ul>
                 </div>
-                <div class="navbar-end">
-                  <a class="btn btn-error">Login</a>
+                <div class="">
+                  <a class="btn bg-brand_color text-white text-xl">Login</a>
                 </div>
               </div>
         </nav>
+        <!-- carousel -->
+        <div class="carousel w-full bg-banner_bg lg:h-[550px]">
+            <div id="slide1" class="carousel-item relative w-full">
+              <div class="flex flex-col lf:flex-row gap-10 lg:gap-40 p-4 lg:p-24">
+                <div class="space-y-6 flex-1">
+                    <h1 class="text-6xl font-bold">
+                        Ride-on R15 V4 <br> with Smile
+                    </h1>
+                    <p>
+                        Amet minim mollit non deserunt ullamco <br> 
+                        est sit aliqua dolor do amet sint. Velit officia consequat <br> 
+                        duis enim velit mollit.
+                    </p>
+                    <button class="btn text-xl bg-brand_color text-white">Purchase</button>
+                </div>
+                <div class="flex-1">
+                    <img src="images/slider/bike1.png" class="w-[406px]" />
+                </div>
+              </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide4" class="btn btn-circle">❮</a> 
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <!-- slider 2 -->
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="flex flex-col lf:flex-row gap-10 lg:gap-40 p-4 lg:p-24">
+                    <div class="space-y-6 flex-1">
+                        <h1 class="text-6xl font-bold">
+                            Ride-on R15 V4 <br> with Smile
+                        </h1>
+                        <p>
+                            Amet minim mollit non deserunt ullamco <br> 
+                            est sit aliqua dolor do amet sint. Velit officia consequat <br> 
+                            duis enim velit mollit.
+                        </p>
+                        <button class="btn text-xl bg-brand_color text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1">
+                        <img src="images/slider/bike2.png" class="w-[406px]" />
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn btn-circle">❮</a> 
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <!-- slider 3 -->
+            <div id="slide3" class="carousel-item relative w-[406px]">
+                <div class="flex flex-col lf:flex-row gap-20 lg:gap-40 p-4 lg:p-24">
+                    <div class="space-y-6 flex-1">
+                        <h1 class="text-6xl font-bold">
+                            Ride-on R15 V4 <br> with Smile
+                        </h1>
+                        <p>
+                            Amet minim mollit non deserunt ullamco <br> 
+                            est sit aliqua dolor do amet sint. Velit officia consequat <br> 
+                            duis enim velit mollit.
+                        </p>
+                        <button class="btn text-xl bg-brand_color text-white">Purchase</button>
+                    </div>
+                    <div class="flex-1">
+                        <img src="images/slider/bike3.png" class="w-full" />
+                    </div>
+                  </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn btn-circle">❮</a> 
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <div id="slide4" class="carousel-item relative w-full">
+              <img src="images/slider/bike4.png" class="w-full" />
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle">❮</a> 
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
     </header>
-    <main>
+    <main class="md:container md:max-auto">
 
     </main>
 
