--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
               </div>
         </nav>
         <!-- carousel -->
+        <!-- slider 1 -->
         <div class="carousel w-full bg-banner_bg lg:h-[550px]">
             <div id="slide1" class="carousel-item relative w-full">
-              <div class="flex flex-col lf:flex-row gap-10 lg:gap-40 p-4 lg:p-24">
+              <div class="flex flex-col lg:flex-row gap-10 lg:gap-40 p-4 lg:p-24">
                 <div class="space-y-6 flex-1">
                     <h1 class="text-6xl font-bold">
                         Ride-on R15 V4 <br> with Smile
@@ -89,7 +90,7 @@
             </div> 
             <!-- slider 2 -->
             <div id="slide2" class="carousel-item relative w-full">
-                <div class="flex flex-col lf:flex-row gap-10 lg:gap-40 p-4 lg:p-24">
+                <div class="flex flex-col lg:flex-row  gap-10 lg:gap-40 p-4 lg:p-24">
                     <div class="space-y-6 flex-1">
                         <h1 class="text-6xl font-bold">
                             Ride-on R15 V4 <br> with Smile
@@ -111,8 +112,8 @@
               </div>
             </div> 
             <!-- slider 3 -->
-            <div id="slide3" class="carousel-item relative w-[406px]">
-                <div class="flex flex-col lf:flex-row gap-20 lg:gap-40 p-4 lg:p-24">
+            <div id="slide3" class="carousel-item relative w-full">
+                <div class="flex flex-col lg:flex-row gap-20 lg:gap-40 p-4 lg:p-24">
                     <div class="space-y-6 flex-1">
                         <h1 class="text-6xl font-bold">
                             Ride-on R15 V4 <br> with Smile
@@ -125,21 +126,14 @@
                         <button class="btn text-xl bg-brand_color text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="images/slider/bike3.png" class="w-full" />
+                        <img src="images/slider/bike3.png" class="w-[406px]" />
                     </div>
                   </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle">❮</a> 
-                <a href="#slide4" class="btn btn-circle">❯</a>
-              </div>
-            </div> 
-            <div id="slide4" class="carousel-item relative w-full">
-              <img src="images/slider/bike4.png" class="w-full" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                <a href="#slide3" class="btn btn-circle">❮</a> 
                 <a href="#slide1" class="btn btn-circle">❯</a>
               </div>
-            </div>
+            </div> 
           </div>
     </header>
     <main class="md:container md:max-auto">
