--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 </head>
 
 <body class="font_poppins">
-    <header class="md:container md:max-auto">
+    <header class="md:container md:max-auto lg:w-full">
         <!-- navbar -->
         <nav>
-            <div class="navbar bg-base-100">
+            <div class="navbar bg-base-100 p-4 lg:px-20">
                 <div class="flex-1">
                   <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -64,12 +64,12 @@
               </div>
         </nav>
         <!-- carousel -->
-        <!-- slider 1 -->
         <div class="carousel w-full bg-banner_bg lg:h-[550px]">
+          <!-- slider 1-->
             <div id="slide1" class="carousel-item relative w-full">
               <div class="flex flex-col lg:flex-row gap-10 lg:gap-40 p-4 lg:p-24">
                 <div class="space-y-6 flex-1">
-                    <h1 class="text-6xl font-bold">
+                    <h1 class="text-4xl lg:text-6xl font-bold">
                         Ride-on R15 V4 <br> with Smile
                     </h1>
                     <p>
@@ -79,7 +79,7 @@
                     </p>
                     <button class="btn text-xl bg-brand_color text-white">Purchase</button>
                 </div>
-                <div class="flex-1">
+                <div>
                     <img src="images/slider/bike1.png" class="w-[406px]" />
                 </div>
               </div>
@@ -92,7 +92,7 @@
             <div id="slide2" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row  gap-10 lg:gap-40 p-4 lg:p-24">
                     <div class="space-y-6 flex-1">
-                        <h1 class="text-6xl font-bold">
+                        <h1 class="text-4xl lg:text-6xl font-bold">
                             Ride-on R15 V4 <br> with Smile
                         </h1>
                         <p>
@@ -102,7 +102,7 @@
                         </p>
                         <button class="btn text-xl bg-brand_color text-white">Purchase</button>
                     </div>
-                    <div class="flex-1">
+                    <div>
                         <img src="images/slider/bike2.png" class="w-[406px]" />
                     </div>
                   </div>
@@ -115,7 +115,7 @@
             <div id="slide3" class="carousel-item relative w-full">
                 <div class="flex flex-col lg:flex-row gap-20 lg:gap-40 p-4 lg:p-24">
                     <div class="space-y-6 flex-1">
-                        <h1 class="text-6xl font-bold">
+                        <h1 class="text-4xl lg:text-6xl font-bold">
                             Ride-on R15 V4 <br> with Smile
                         </h1>
                         <p>
@@ -125,19 +125,94 @@
                         </p>
                         <button class="btn text-xl bg-brand_color text-white">Purchase</button>
                     </div>
-                    <div class="flex-1">
+                    <div>
                         <img src="images/slider/bike3.png" class="w-[406px]" />
                     </div>
                   </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle">❮</a> 
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div> 
+            <!-- slider 4 -->
+            <div id="slide4" class="carousel-item relative w-full">
+              <div class="flex flex-col lg:flex-row gap-10 lg:gap-40 p-4 lg:p-24">
+                <div class="space-y-6 flex-1">
+                    <h1 class="text-4xl lg:text-6xl font-bold">
+                        Ride-on R15 V4 <br> with Smile
+                    </h1>
+                    <p>
+                        Amet minim mollit non deserunt ullamco <br> 
+                        est sit aliqua dolor do amet sint. Velit officia consequat <br> 
+                        duis enim velit mollit.
+                    </p>
+                    <button class="btn text-xl bg-brand_color text-white">Purchase</button>
+                </div>
+                <div>
+                    <img src="images/slider/bike4.png" class="w-[406px]" />
+                </div>
+              </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn btn-circle">❮</a> 
                 <a href="#slide1" class="btn btn-circle">❯</a>
               </div>
             </div> 
           </div>
     </header>
     <main class="md:container md:max-auto">
-
+      <!-- feature bike -->
+      <section>
+        <div class="py-[130px]">
+          <h2 class="text-center text-5xl font-bold">Fetured Bikes In This Year</h2>
+          <p class="text-center text-sm text-[#E76F51] py-4">Best bike collection</p>
+          <div class="p4 lg:p-20 flex justify-between">
+            <img src="images/others/feature-bike.png" alt="">
+            <img src="images/others/feature-bike.png" alt="">
+            <img src="images/others/feature-bike.png" alt="">
+          </div>
+        </div>
+      </section>
+      <!-- latest bike -->
+      <section>
+        <div>
+          <h2 class="font-bold text-5xl text-center pb-[50px]">Latest News</h2>
+          <div class="grid grid-cols-3 gap-5">
+            <!-- card 1 -->
+            <div class="card bg-base-100 shadow-xl">
+              <figure><img src="images/others/latest1.png" alt="bike" /></figure>
+              <div class="card-body">
+                <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn bg-brand_color text-white">Purchase</button>
+                </div>
+              </div>
+            </div>
+            <!-- card 2 -->
+            <div class="card bg-base-100 shadow-xl">
+              <figure><img src="images/others/latest2.png" alt="bike" /></figure>
+              <div class="card-body">
+                <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn bg-brand_color text-white">Purchase</button>
+                </div>
+              </div>
+            </div>
+            <!-- card 3 -->
+            <div class="card bg-base-100 shadow-xl">
+              <figure><img src="images/others/latest3.png" alt="bike" /></figure>
+              <div class="card-body">
+                <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn bg-brand_color text-white">Purchase</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
 </body>
